--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
+    "mongoose": "^6.10.0",
     "next": "13.1.1",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0"
   }
 }
